--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "select2": "^4.1.0-rc.0",
