--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "mapbox-gl": "^2.7.0",
     "select2": "^4.1.0-rc.0",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
